--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,33 +5,54 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"
         tools:context=".MainActivity">
 
     <Button
             android:id="@+id/filterButton"
-            android:text="Classification - eyes"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:text="@string/classification_eyes"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/blue_one"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/faceContourButton"
+            android:layout_margin="16dp"
+            app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
             android:id="@+id/faceContourButton"
-            android:text="Face contours"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:text="@string/face_contours"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/orange_one"
+            android:layout_margin="16dp"
             app:layout_constraintTop_toBottomOf="@id/filterButton"
+            app:layout_constraintBottom_toTopOf="@id/languageButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
             android:id="@+id/languageButton"
-            android:text="Language identification"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:text="@string/language_identification"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/pink_one"
+            android:layout_margin="16dp"
+            app:layout_constraintBottom_toTopOf="@id/chatButton"
             app:layout_constraintTop_toBottomOf="@id/faceContourButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+            android:id="@+id/chatButton"
+            android:text="@string/language_identification"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/yellow_one"
+            android:layout_margin="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/languageButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
