--- a/app/src/main/res/layout/activity_smart_reply.xml
+++ b/app/src/main/res/layout/activity_smart_reply.xml
@@ -14,8 +14,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/messageTextInputLayout"
+            app:layout_constraintBottom_toTopOf="@id/suggestionRecyclerView"
             tools:listitem="@layout/item_chat"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/suggestionRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/messageTextInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/messageTextInputLayout"
@@ -30,6 +38,8 @@
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:imeOptions="actionGo"
+                android:inputType="text"
                 android:hint="@string/message"
                 android:id="@+id/messageEditText"/>
 
