--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -20,12 +20,15 @@
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_height="wrap_content"
-                tools:text="Alice" android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                tools:text="Alice"
+                android:textColor="@android:color/white"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textSize="12sp"/>
 
         <TextView
                 android:id="@+id/messageTextView"
                 android:layout_width="0dp"
+                android:textColor="@android:color/white"
                 app:layout_constraintStart_toEndOf="@id/smartReplyImageView"
                 app:layout_constraintTop_toBottomOf="@id/pseudoTextView"
                 app:layout_constraintBottom_toBottomOf="parent"
